<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.extli.bloodiagluc.RegistroPaciente"
    android:background="#f44336">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/regStringP"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nomMedico"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:paddingTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dirMedico"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:paddingTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/edadStr"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:paddingTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/padeStr"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:paddingTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usrStr"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:paddingTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passMedico"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:paddingTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginTop="71dp"
        android:text="@string/registroSn"
        android:background="#869cde"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/namePaciente"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:minWidth="200dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addrPaciente"
        android:minWidth="200dp"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/namePaciente"
        android:layout_alignStart="@+id/namePaciente" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/agePaciente"
        android:minWidth="200dp"
        android:layout_above="@+id/textView7"
        android:layout_alignLeft="@+id/addrPaciente"
        android:layout_alignStart="@+id/addrPaciente" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/disPaciente"
        android:minWidth="200dp"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/agePaciente"
        android:layout_alignStart="@+id/agePaciente" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usrPaciente"
        android:minWidth="200dp"
        android:layout_above="@+id/textView9"
        android:layout_alignLeft="@+id/disPaciente"
        android:layout_alignStart="@+id/disPaciente" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passPaciente"
        android:minWidth="200dp"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignLeft="@+id/usrPaciente"
        android:layout_alignStart="@+id/usrPaciente" />



</RelativeLayout>
