<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.extli.bloodiagluc.RegistroUsr"
    android:background="#f44336">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/regString"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nomMedico"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:paddingTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dirMedico"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:paddingTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/telMedico"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:paddingTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mailMedico"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:paddingTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passMedico"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:paddingTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegMedico"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:text="@string/registroSn"
        android:background="#869cde"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameField"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/btnRegMedico"
        android:layout_alignStart="@+id/btnRegMedico"
        android:minWidth="200dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addrField"
        android:minWidth="200dp"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/nameField"
        android:layout_alignStart="@+id/nameField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneField"
        android:minWidth="200dp"
        android:layout_above="@+id/textView7"
        android:layout_alignLeft="@+id/addrField"
        android:layout_alignStart="@+id/addrField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mailField"
        android:minWidth="200dp"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/phoneField"
        android:layout_alignStart="@+id/phoneField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passField"
        android:minWidth="200dp"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/mailField"
        android:layout_alignStart="@+id/mailField" />

</RelativeLayout>
